fix(tooltip): Allow tooltips to break words if they are too long.

--- a/packages/scss/src/components/tooltip/component.scss
+++ b/packages/scss/src/components/tooltip/component.scss
@@ -17,6 +17,7 @@
 	animation-name: scaleIn;
 	animation-duration: var(--commons-animations-durations-fast);
 	animation-iteration-count: 1;
+	word-wrap: break-word;
 
 	@include keyframe.scaleIn;
 
